--- a/gulimall-auth-serve/src/main/resources/templates/login.html
+++ b/gulimall-auth-serve/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
         <div class="si_out">
             <ul>
                 <li>
-                    <a href="https://api.weibo.com/oauth2/authorize?client_id=2476969271&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">
+                    <a href="https://api.weibo.com/oauth2/authorize?client_id=client_id&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">
                         <img style="width: 50px;height: 18px" src="/static/login/JD_img/weibo.png"/>
                     </a>
                 </li>
